--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   {% include links.html %}
-  <div id="wrapper" class="typo typo-section">
+  <div id="wrapper" class="typo typo-section textwrap">
     <div id="article-content">
       <header id="header">
         <h1 class="title">{% if page.formatted_title %} {{ page.formatted_title }} {% else %} {{ page.title }} {% endif %}</h1>
