--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="header" class="">
-  <h1 class="title">if page.formatted_title ? page.formatted_title : page.title }}</h1>
+  <h1 class="title">{% if page.formatted_title %} {{ page.formatted_title }} {% else %} {{ page.title }} {% endif %}</h1>
   {{ if page.subtitle }}
     <div class="subtitle">{{ page.subtitle }}</div>
   {{ endif }}
