--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@
       {% endif %}
     </div> <!-- content -->
     <nav class="section-nav">
-      {% include toc.html html=content %}
+      {% include toc.html html=content class="nav-sticky" %}
     </nav>
   </div> <!-- wrapper -->
   {% include footer.html %}
