--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -254,12 +254,12 @@ li {
     top: 20px;
 }
 
-nav > ul > li > a  {
+nav a  {
     border-bottom: none !important;
     color: rgb(138, 138, 138);
 }
 
-nav > ul > li > a:hover  {
+nav a:hover  {
     font-weight: bold;
-    /* color: black; */
+    color: black;
 }
