--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/base16.css">
 
+{% include clarity.html %}
 
 {% if page.mathjax %}
 <script type="text/javascript"
