--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,6 @@
+<link rel="shortcut icon" type="image/png" href="favicon.png">
+<link rel="shortcut icon" type="image/png" href="favicon.svg">
+
 <link rel="stylesheet" media="all" href="/stylesheets/typo.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/base16.css">
